httpclient_connection 3.1.2 fixes problem with url parsing for its proxy handling.